modules/gke/gateway.yaml

apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: gateway-api
  name: gateway-api
spec:
  finalizers:
  - kubernetes
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway-001
  namespace: gateway-api
  annotations:
    networking.gke.io/load-balancer-ip: kip-dev-gateway-ip
    networking.gke.io/certmap: kip-dev-gateway-certmap
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
